[project]
name = "dash-live"
version = "3.6.0"
description = "A simulated MPEG DASH service"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "alembic==1.16.4",
    "asgiref==3.8.1",
    "bcrypt==4.0.1",
    "bitstring==3.1.6",
    "blinker==1.6.2",
    "certifi==2024.7.4",
    "click==8.1.3",
    "crccheck==1.1",
    "flask==2.3.3",
    "flask-jwt-extended==4.6.0",
    "flask-login==0.6.3",
    "flask-socketio==5.3.6",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==23.0.0",
    "idna==3.7",
    "itsdangerous==2.1.2",
    "jinja2==3.1.6",
    "langcodes==3.4.0",
    "language-data==1.2.0",
    "lesscpy==0.15.1",
    "lxml==6.0.0",
    "marisa-trie==1.2.0",
    "markupsafe==2.1.3",
    "mock==3.0.5",
    "netifaces2==0.0.22",
    "passlib==1.7.4",
    "ply==3.11",
    "pycryptodome==3.19.1",
    "python-dotenv==1.0.0",
    "python-socketio==5.9.0",
    "requests==2.32.4",
    "six==1.16.0",
    "soupsieve==2.4.1",
    "sqlalchemy==2.0.36",
    "sqlalchemy-jsonfield==1.0.1.post0",
    "ttconv==1.1.1",
    "typing-extensions==4.12.2",
    "waitress==3.0.1",
    "werkzeug==3.0.6",
]

[dependency-groups]
dev = [
    "beautifulsoup4==4.13.5",
    "coverage==7.3.0",
    "flake8==7.2.0",
    "mypy==1.13.0",
    "pyfakefs==5.9.2",
    "pyinstrument==4.6.1",
    "pytest==7.4.0",
    "pytest-xdist==3.3.1",
    "tox>=4.28.4",
    "tox-uv>=1.28.0",
]

[project.urls]
Issues = "https://github.com/asrashley/dash-live/issues"
Repository = "https://github.com/asrashley/dash-live.git"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["dashlive"]
omit = [
    "*/__main__.py",
    "dashlive/download.py",
    "dashlive/upload.py",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if __name__ == .__main__.:",
]
fail_under = 75.0
skip_empty = true


